@@ -1,3 +1,8 @@
+2015-04-09  Andy Wingo  <wingo@igalia.com>
+
+	* gdb.guile/scm-frame.exp: Add frame-read-register tests, modelled
+	after the Python tests.
+
 2015-04-08  Keith Seitz  <keiths@redhat.com>
 
 	PR python/16699
