@@ -1,3 +1,10 @@
+2015-04-09  Andy Wingo  <wingo@igalia.com>
+
+	* guile/scm-frame.c (gdbscm_frame_read_register): New function.
+	(frame_functions): Bind gdbscm_frame_read_register to
+	frame-read-register.
+	* guile/lib/gdb.scm (frame-read-register): Export.
+
 2015-04-09  Gary Benson <gbenson@redhat.com>
 
 	* common/common-remote-fileio.h (remote_fileio_to_fio_error):
